Significantly reduced img size

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </div>
         <div class="col-lg-6 col-md-12 col-12">
           <div class="header-image">
-            <img src="assets/images/header/Butle.png" alt="#" />
+            <img src="assets/images/header/butle.webp" alt="Butla sodastream" />
           </div>
         </div>
       </div>
