--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body>
   <div class="nav">
     <div class="nav__wrapper">
-      <a class="nav__logo" href="#">
-        <img src="assets/media/logo.svg">
+      <a class="nav__logo" href="#" aria-label="Back to the top">
+        <img src="assets/media/logo.svg" alt="Logo Soda Naboje">
       </a>
       <div class="nav__toggler"><div class="nav__toggler-inner"></div></div>
       <!-- <div class="nav__menu">
@@ -41,7 +41,7 @@
         <p class="mood__paragraph">Jeśli szukasz <strong>niezawodnego</strong> partnera, który zaspokoi Twoje pragnienie orzeźwienia, to właśnie znalazłeś idealne rozwiązanie.</p>
       </div>
       <div class="mood__media">
-        <img src="assets/media/mood.png">
+        <img src="assets/media/mood.png" alt="Zdejcie naboju CO2">
       </div>
     </div>
 
@@ -52,21 +52,21 @@
           <div class="section-text__cols">
             <div class="section-text__col">
               <div class="section-text__icon">
-                <img class="section-text__media" src="assets/media/thumb.png">
+                <img class="section-text__media" src="assets/media/thumb.png" alt="Ikona kciuka w gore">
               </div>
               <h3 class="section-text__col-headline">Najwyższą jakość</h3>
               <p class="section-text__col-paragraph">Dzięki naszemu niezawodnemu procesowi napełniania naboi czystym, <strong>wysokiej jakości</strong> dwutlenkiem węgla, gwarantujemy trwałe i intensywne bąbelki, które idealnie urozmaicą Twoją wodę.</p>
             </div>
             <div class="section-text__col">
               <div class="section-text__icon">
-                <img class="section-text__media" src="assets/media/money.png">
+                <img class="section-text__media" src="assets/media/money.png" alt="Ikona pliku pieniedzy">
               </div>
               <h3 class="section-text__col-headline">Najniższą cene</h3>
               <p class="section-text__col-paragraph">Wybierając nasze usługi, nie tylko cieszysz się orzeźwiającą gazowaną wodą, ale również <strong>niską ceną</strong>.</p>
             </div>
             <div class="section-text__col">
               <div class="section-text__icon">
-                <img class="section-text__media" src="assets/media/loop.png">
+                <img class="section-text__media" src="assets/media/loop.png" alt="Ikona recyklingu">
               </div>
               <h3 class="section-text__col-headline">Pro ekologiczne rozwiązania</h3>
               <p class="section-text__col-paragraph">Jesteśmy dumni z naszej odpowiedzialności za <strong>środowisko naturalne.</strong></p>
@@ -119,7 +119,7 @@
   </section>
 
   <div class="map-container">
-    <iframe width="425" height="350" src="https://www.openstreetmap.org/export/embed.html?bbox=14.629787206649782%2C53.376646969071054%2C14.64255452156067%2C53.38112055013433&amp;layer=hot&amp;marker=53.37888381834763%2C14.636170864105225"></iframe>
+    <iframe title="map" width="425" height="350" src="https://www.openstreetmap.org/export/embed.html?bbox=14.629787206649782%2C53.376646969071054%2C14.64255452156067%2C53.38112055013433&amp;layer=hot&amp;marker=53.37888381834763%2C14.636170864105225"></iframe>
   </div>
 
   <script src="main.js"></script>
