--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p class="mood__paragraph">Jeśli szukasz <strong>niezawodnego</strong> partnera, który zaspokoi Twoje pragnienie orzeźwienia, to właśnie znalazłeś idealne rozwiązanie.</p>
       </div>
       <div class="mood__media">
-        <img src="assets/media/mood.png" alt="Zdejcie naboju CO2">
+        <img src="assets/media/mood.webp" alt="Zdejcie naboju CO2">
       </div>
     </div>
 
