Google maps banner added + misc

--- a/index.html
+++ b/index.html
@@ -1,128 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!--====== Required meta tags ======-->
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta
+      name="description"
+      content="Napelnianie i wymiana Butli CO2 do Sodastream Szczecin Prawobrzeże"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-<head>
-  <!--====== Required meta tags ======-->
-  <meta charset="utf-8" />
-  <meta http-equiv="x-ua-compatible" content="ie=edge" />
-  <meta name="description" content="Napelnianie i wymiana Butli CO2 do Sodastream Szczecin Prawobrzeże" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!--====== Title ======-->
+    <title>Soda Naboje - Sodastream Szczecin Prawobrzeże</title>
+    <!--====== Favicon Icon ======-->
+    <link
+      rel="shortcut icon"
+      href="assets/media/favicon.svg"
+      type="image/svg"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-  <!--====== Title ======-->
-  <title>Soda Naboje - Sodastream Szczecin Prawobrzeże</title>
-
-  <!--====== Favicon Icon ======-->
-  <link rel="shortcut icon" href="assets/media/favicon.svg" type="image/svg" />
-  <link rel="stylesheet" href="style.css" />
-</head>
-
-<body>
-  <div class="nav">
-    <div class="nav__wrapper">
-      <a class="nav__logo" href="#" aria-label="Back to the top">
-        <img src="assets/media/logo.svg" alt="Logo Soda Naboje">
-      </a>
-      <div class="nav__toggler"><div class="nav__toggler-inner"></div></div>
-      <!-- <div class="nav__menu">
+  <body>
+    <div class="nav">
+      <div class="nav__wrapper">
+        <a class="nav__logo" href="#" aria-label="Back to the top">
+          <img src="assets/media/logo.svg" alt="Logo Soda Naboje" />
+        </a>
+        <div class="nav__toggler">
+          <div class="nav__toggler-inner"></div>
+        </div>
+        <!-- <div class="nav__menu">
         <a class="nav__menu-item" href="#">O nas</a>
         <a class="nav__menu-item" href="#">Kontakt</a>
         <a class="nav__menu-item" href="#">Jak dojechac</a>
       </div> -->
-    </div>
-  </div>
-
-  <section class="content">
-
-    <div class="mood">
-      <div class="mood__content">
-        <h1 class="mood__headline">Napełnianie butli Co2</h1>
-        <p class="mood__paragraph">Specjalizujemy się w napełnianiu i wymianie pustych naboi  do gazowania wody!</p>
-        <p class="mood__paragraph">Oferujemy <strong>najwyższej</strong> jakości usługi, które sprawią, że Twoje napoje osiągną pełnie smaku.</p>
-        <p class="mood__paragraph">Jeśli szukasz <strong>niezawodnego</strong> partnera, który zaspokoi Twoje pragnienie orzeźwienia, to właśnie znalazłeś idealne rozwiązanie.</p>
-      </div>
-      <div class="mood__media">
-        <img src="assets/media/mood.webp" alt="Zdejcie naboju CO2">
       </div>
     </div>
 
-    <div class="section-text section-text--about">
-      <div class="section-text__wrapper">
-        <div class="section-text__inner-wrapper">
-          <h2 class="section-text__headline">Stawiamy na</h2>
-          <div class="section-text__cols">
-            <div class="section-text__col">
-              <div class="section-text__icon">
-                <img class="section-text__media" src="assets/media/thumb.png" alt="Ikona kciuka w gore">
+    <section class="content">
+      <div class="mood">
+        <div class="mood__content">
+          <h1 class="mood__headline">Napełnianie butli Co2</h1>
+          <p class="mood__paragraph">
+            Specjalizujemy się w napełnianiu i wymianie pustych naboi do
+            gazowania wody!
+          </p>
+          <p class="mood__paragraph">
+            Oferujemy <strong>najwyższej</strong> jakości usługi, które sprawią,
+            że Twoje napoje osiągną pełnie smaku.
+          </p>
+          <p class="mood__paragraph">
+            Jeśli szukasz <strong>niezawodnego</strong> partnera, który zaspokoi
+            Twoje pragnienie orzeźwienia, to właśnie znalazłeś idealne
+            rozwiązanie.
+          </p>
+        </div>
+        <div class="mood__media">
+          <img src="assets/media/mood.webp" alt="Zdejcie naboju CO2" />
+        </div>
+      </div>
+
+      <div class="section-text section-text--about">
+        <div class="section-text__wrapper">
+          <div class="section-text__inner-wrapper">
+            <h2 class="section-text__headline">Stawiamy na</h2>
+            <div class="section-text__cols">
+              <div class="section-text__col">
+                <div class="section-text__icon">
+                  <img
+                    class="section-text__media"
+                    src="assets/media/thumb.png"
+                    alt="Ikona kciuka w gore"
+                  />
+                </div>
+                <h3 class="section-text__col-headline">Najwyższą jakość</h3>
+                <p class="section-text__col-paragraph">
+                  Dzięki naszemu niezawodnemu procesowi napełniania naboi
+                  czystym,
+                  <strong>wysokiej jakości</strong>
+                  dwutlenkiem węgla, gwarantujemy trwałe i intensywne bąbelki,
+                  które idealnie urozmaicą Twoją wodę.
+                </p>
               </div>
-              <h3 class="section-text__col-headline">Najwyższą jakość</h3>
-              <p class="section-text__col-paragraph">Dzięki naszemu niezawodnemu procesowi napełniania naboi czystym, <strong>wysokiej jakości</strong> dwutlenkiem węgla, gwarantujemy trwałe i intensywne bąbelki, które idealnie urozmaicą Twoją wodę.</p>
-            </div>
-            <div class="section-text__col">
-              <div class="section-text__icon">
-                <img class="section-text__media" src="assets/media/money.png" alt="Ikona pliku pieniedzy">
+              <div class="section-text__col">
+                <div class="section-text__icon">
+                  <img
+                    class="section-text__media"
+                    src="assets/media/money.png"
+                    alt="Ikona pliku pieniedzy"
+                  />
+                </div>
+                <h3 class="section-text__col-headline">Najniższą cene</h3>
+                <p class="section-text__col-paragraph">
+                  Wybierając nasze usługi, nie tylko cieszysz się orzeźwiającą
+                  gazowaną wodą, ale również
+                  <strong>niską ceną</strong>.
+                </p>
               </div>
-              <h3 class="section-text__col-headline">Najniższą cene</h3>
-              <p class="section-text__col-paragraph">Wybierając nasze usługi, nie tylko cieszysz się orzeźwiającą gazowaną wodą, ale również <strong>niską ceną</strong>.</p>
-            </div>
-            <div class="section-text__col">
-              <div class="section-text__icon">
-                <img class="section-text__media" src="assets/media/loop.png" alt="Ikona recyklingu">
+              <div class="section-text__col">
+                <div class="section-text__icon">
+                  <img
+                    class="section-text__media"
+                    src="assets/media/loop.png"
+                    alt="Ikona recyklingu"
+                  />
+                </div>
+                <h3 class="section-text__col-headline">
+                  Pro ekologiczne rozwiązania
+                </h3>
+                <p class="section-text__col-paragraph">
+                  Jesteśmy dumni z naszej odpowiedzialności za
+                  <strong>środowisko naturalne.</strong>
+                </p>
               </div>
-              <h3 class="section-text__col-headline">Pro ekologiczne rozwiązania</h3>
-              <p class="section-text__col-paragraph">Jesteśmy dumni z naszej odpowiedzialności za <strong>środowisko naturalne.</strong></p>
             </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="section-text section-text--small">
-      <div class="section-text__wrapper">
-        <div class="section-text__inner-wrapper">
-          <p>Skontaktuj się z nami już dziś,<br>aby doświadczyć <strong>niezrównanej</strong> przyjemności z picia gazowanej wody.</p>
+      <div class="section-text section-text--small">
+        <div class="section-text__wrapper">
+          <div class="section-text__inner-wrapper">
+            <p>
+              Skontaktuj się z nami już dziś,<br />aby doświadczyć
+              <strong>niezrównanej</strong> przyjemności z picia gazowanej wody.
+            </p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="contact">
-      <div class="contact__item">
-        <div class="contact__icon">
-          <i class="lni lni-map-marker"></i>
+      <div class="contact">
+        <div class="contact__item">
+          <div class="contact__icon">
+            <i class="lni lni-map-marker"></i>
+          </div>
+          <div class="contact__content">
+            <h4>Adres</h4>
+            <p>Walecznych 13</p>
+            <p>70-774 Szczecin</p>
+          </div>
         </div>
-        <div class="contact__content">
-          <h4>Adres</h4>
-          <p>Walecznych 13</p>
-          <p>70-774 Szczecin</p>
+        <div class="contact__item">
+          <div class="contact__icon">
+            <i class="lni lni-phone"></i>
+          </div>
+          <div class="contact__content">
+            <h4>Kontakt</h4>
+            <p><a href="tel:+48 537 998 998">+48 537 998 998</a></p>
+            <p><a href="mailto:gasnica@op.pl">gasnica@op.pl</a></p>
+          </div>
+        </div>
+        <div class="contact__item">
+          <div class="contact__icon">
+            <i class="lni lni-alarm-clock"></i>
+          </div>
+          <div class="contact__content">
+            <h4>Godziny Otwarcia</h4>
+            <p>Od poniedziałku do piątku</p>
+            <p>8:00 - 16:00</p>
+          </div>
         </div>
       </div>
-      <div class="contact__item">
-        <div class="contact__icon">
-          <i class="lni lni-phone"></i>
-        </div>
-        <div class="contact__content">
-          <h4>Kontakt</h4>
-          <p><a href="tel:+48 537 998 998">+48 537 998 998</a></p>
-          <p><a href="mailto:gasnica@op.pl">gasnica@op.pl</a></p>
-        </div>
+
+      <div class="map">
+        <a class="map__link" href="https://maps.app.goo.gl/bwdSaG2Cz5qGqQgH6">
+          <p>Znajdź nas na google maps</p>
+          <img src="assets/media/google-maps-logo.png" alt="" />
+        </a>
       </div>
-      <div class="contact__item">
-        <div class="contact__icon">
-          <i class="lni lni-alarm-clock"></i>
-        </div>
-        <div class="contact__content">
-          <h4>Godziny Otwarcia</h4>
-          <p>Od poniedziałku do piątku</p>
-          <p>8:00 - 16:00</p>
-        </div>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <div class="map-container">
-    <iframe title="map" width="425" height="350" src="https://www.openstreetmap.org/export/embed.html?bbox=14.629787206649782%2C53.376646969071054%2C14.64255452156067%2C53.38112055013433&amp;layer=hot&amp;marker=53.37888381834763%2C14.636170864105225"></iframe>
-  </div>
+    <!-- <div class="map-container">
+      <iframe title="map" width="425" height="350" src="https://www.openstreetmap.org/export/embed.html?bbox=14.629787206649782%2C53.376646969071054%2C14.64255452156067%2C53.38112055013433&amp;layer=hot&amp;marker=53.37888381834763%2C14.636170864105225"></iframe>
+    </div> -->
 
-  <script src="main.js"></script>
-</body>
-
+    <script src="main.js"></script>
+  </body>
 </html>
